--- a/package.json
+++ b/package.json
@@ -1,1 +1,29 @@
-init
+{
+  "name": "login-simple-app",
+  "version": "1.0.0",
+  "description": "Aplikasi login sederhana dengan Express, SQLite, dan HTTPS",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
+  "keywords": [
+    "login",
+    "express",
+    "sqlite",
+    "bcrypt",
+    "secure"
+  ],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "sqlite3": "^5.1.7"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.3"
+  }
+}
